[package]
name = "events_layout"
version = "0.1.0"
edition = "2021"
# Optional fields
description = "A Rust library for processing events and generating layout information"
license = "MIT"                                                                        # 或者您选择的其他许可证
repository = "https://github.com/AngusFu/events_layout"                            # 您的代码仓库链接
homepage = "https://github.com/AngusFu/events_layout"                                                  # 项目的主页链接
authors = ["angusfu1126@qq.com"]

[dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"] # 生成动态库以供 WebAssembly 使用

[profile.dev]
opt-level = 2 # 开发模式的优化级别

[profile.release]
lto = true
opt-level = 'z'
